--- a/package.json
+++ b/package.json
@@ -22,7 +22,8 @@
     "react-dom": "^18.3.1",
     "react-router-dom": "^6.26.2",
     "sass": "^1.78.0",
-    "three": "^0.163.0"
+    "three": "^0.163.0",
+    "vite": "^5.4.0"
   },
   "devDependencies": {
     "@eslint/js": "^9.8.0",
