--- a/package.json
+++ b/package.json
@@ -20,6 +20,7 @@
     "leva": "^0.9.35",
     "react": "^18.3.1",
     "react-dom": "^18.3.1",
+    "react-image-gallery": "^1.3.0",
     "react-router-dom": "^6.26.2",
     "sass": "^1.78.0",
     "three": "^0.163.0",
